--- a/.gitignore
+++ b/.gitignore
@@ -174,3 +174,4 @@ google_cardboard_sdk/Assets/Sketchfab For Unity/*
 # ignore MRTK packages
 MRTK_basics/Assets/MixedRealityToolkit*
 MRTK_basics/Assets/MRTK*
+MRTK_basics/Assets/TextMesh Pro*
