--- a/.gitignore
+++ b/.gitignore
@@ -176,3 +176,6 @@ MRTK_basics/Assets/MixedRealityToolkit*
 MRTK_basics/Assets/MRTK*
 MRTK_basics/Assets/TextMesh Pro*
 MRTK_basics/Builds/*
+
+google_cardboard_XR/*
+cardboard_test/*
